--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express-handlebars": "^7.0.7",
+    "mysql2": "^3.4.0",
     "pug": "^3.0.2"
   }
 }
