--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.9",
     "express-handlebars": "^7.0.7",
     "mysql2": "^3.4.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sequelize": "^6.32.1"
   }
 }
